--- a/Reactjs/src/containers/System/UserManage.scss
+++ b/Reactjs/src/containers/System/UserManage.scss
@@ -2,6 +2,10 @@
     margin: 20px 30px;
 }
 
+.btn-new-user {
+    margin: 0 0 6px 30px;
+}
+
 #customers {
     font-family: Arial, Helvetica, sans-serif;
     border-collapse: collapse;
@@ -51,4 +55,27 @@
     &:hover {
         color: red;
     }
+}
+
+.modal-user-container {
+    .modal-header {
+        .modal-title {
+            margin-left: 15px;
+        }
+
+        button {
+            background-color: transparent;
+            border: none;
+            color: white;
+            font-size: 24px;
+        }
+    }
+}
+
+.btn-save {
+    padding: 0px 12px;
+}
+
+.btn-cancel {
+    padding: 0px 12px;
 }
