#55 Hoàn Thiện Menu Phân Quyền Dành Cho Admin

--- a/Reactjs/src/containers/Header/Header.scss
+++ b/Reactjs/src/containers/Header/Header.scss
@@ -25,6 +25,10 @@
     }
 
     .languages {
+        .welcome {
+            margin-right: 12px;
+        }
+
         .language-en {
             opacity: 0.8;
             margin-right: 15px;
