#69 Tạo Giao Diện Trang Xem Chi Tiết Thông Tin Bác Sĩ Phía Client

--- a/Reactjs/src/containers/HomePage/HomePage.scss
+++ b/Reactjs/src/containers/HomePage/HomePage.scss
@@ -60,6 +60,7 @@
 
             .section-body {
                 .section-customize {
+                    cursor: pointer;
                     border: 1px solid yellow;
 
                     .section-img {
