--- a/Reactjs/src/containers/HomePage/HomeHeader.scss
+++ b/Reactjs/src/containers/HomePage/HomeHeader.scss
@@ -20,6 +20,11 @@
                 text-decoration: underline;
                 margin-left: 12px;
                 margin-bottom: 4px;
+
+                &:hover {
+                    cursor: pointer;
+                    color: #212529b8;
+                }
             }
 
             i {
