--- a/Reactjs/src/containers/System/Admin/ManageDoctor.scss
+++ b/Reactjs/src/containers/System/Admin/ManageDoctor.scss
@@ -26,7 +26,7 @@
         margin-top: 22px;
     }
 
-    .btn-save-content {
+    .btn-content {
         display: flex;
         justify-content: center;
         margin: 16px auto;
