--- a/Reactjs/src/components/Navigator.scss
+++ b/Reactjs/src/components/Navigator.scss
@@ -36,7 +36,7 @@
             padding: 0;
 
             .menu {
-                width: 205px;
+                width: 100%;
                 padding: 0 15px;
                 height: 35px;
                 line-height: 35px;
@@ -84,7 +84,7 @@
                 }
 
                 &.active {
-                    background-color: rgb(128, 128, 128);
+                    background-color: darken($bg-menu-color, 3);
 
                     a {
                         color: orange;
