#75 Tạo Base Component Chọn Lịch Khám Bệnh và Load Dữ Liệu

--- a/Reactjs/src/containers/Patient/Doctor/DoctorDetail.scss
+++ b/Reactjs/src/containers/Patient/Doctor/DoctorDetail.scss
@@ -30,6 +30,12 @@
         }
     }
 
+    .schedule-doctor {
+        height: 200px;
+        margin: 0 100px;
+        border: 1px solid red;
+    }
+
     .detail-infor-doctor {
         // padding-top: 22px;
         padding: 10px 100px;
