#76 Load Động Data Chọn Lịch Khám Bệnh Theo Thời Gian Ngày Tạo

--- a/Reactjs/src/containers/Patient/Doctor/DoctorDetail.scss
+++ b/Reactjs/src/containers/Patient/Doctor/DoctorDetail.scss
@@ -31,9 +31,8 @@
     }
 
     .schedule-doctor {
-        height: 200px;
+        width: 50%;
         margin: 0 100px;
-        border: 1px solid red;
     }
 
     .detail-infor-doctor {
