--- a/Reactjs/src/containers/Patient/Doctor/DoctorSchedule.scss
+++ b/Reactjs/src/containers/Patient/Doctor/DoctorSchedule.scss
@@ -1,6 +1,6 @@
 .doctor-schedule-container {
-    height: 200px;
-    border-right: 1px solid #008000;
+    min-height: 200px;
+    border-right: 1px solid #ddd;
 
     .all-schedule {
         select {
@@ -32,23 +32,40 @@
         }
 
         .time-content {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 8px;
-            margin-top: 12px;
+            .time-content-btns {
+                display: flex;
+                flex-wrap: wrap;
+                gap: 8px;
+                margin-top: 12px;
 
-            button {
-                padding: 12px 8px;
-                min-width: 120px;
-                border: none;
-                font-weight: 600;
-                color: #5a5959;
-                background-color: #fff04b;
+                button {
+                    padding: 12px 8px;
+                    min-width: 120px;
+                    border: none;
+                    font-weight: 600;
+                    color: #5a5959;
+                    background-color: #fff04b;
 
-                &:hover {
-                    color: white;
-                    background-color: #45c3d2;
+                    &:hover {
+                        color: white;
+                        background-color: #45c3d2;
+                    }
                 }
+
+                .btn-vi {}
+
+                .btn-en {
+                    min-width: 155px;
+                }
+            }
+
+            .book-free {
+                margin: 12px 0;
+            }
+
+            .no-schedule {
+                font-style: italic;
+                font-size: 16px;
             }
         }
 
