--- a/Reactjs/src/containers/Patient/Doctor/DoctorDetail.scss
+++ b/Reactjs/src/containers/Patient/Doctor/DoctorDetail.scss
@@ -31,8 +31,16 @@
     }
 
     .schedule-doctor {
-        width: 50%;
         margin: 0 100px;
+        display: flex;
+
+        .content-left {
+            width: 50%;
+        }
+
+        .content-right {
+            width: 50%;
+        }
     }
 
     .detail-infor-doctor {
