#81 Hoàn Thiện Component Thông Tin Khám Bệnh Của Bác Sĩ

--- a/Reactjs/src/containers/Patient/Doctor/DoctorInforExtra.scss
+++ b/Reactjs/src/containers/Patient/Doctor/DoctorInforExtra.scss
@@ -28,6 +28,10 @@
                 cursor: pointer;
                 color: rgb(21, 212, 212);
             }
+
+            .currency {
+                margin: 0 5px;
+            }
         }
 
         .title-price {
