--- a/Reactjs/src/containers/Patient/Doctor/DoctorDetail.scss
+++ b/Reactjs/src/containers/Patient/Doctor/DoctorDetail.scss
@@ -15,7 +15,7 @@
             border-radius: 50%;
         }
 
-        .content-righ {
+        .content-right {
             margin-top: 12px;
             width: 80%;
 
